--- a/2-structure-1.ipynb
+++ b/2-structure-1.ipynb
@@ -72,38 +72,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type('string')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "float"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(2.22)"
    ]
   },
   {
@@ -132,11 +176,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "a = 12\n",
+    "b = 30\n",
+    "f = 3.14\n",
+    "s = 'abracadabra'\n",
+    "i = [1,2,3]\n",
+    "t = True\n",
+    "f = False"
    ]
   },
   {
@@ -148,38 +198,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(a)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(s)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(t)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "type(i)"
    ]
   },
   {
@@ -198,11 +292,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "b = 18\n",
+    "type(b)\n",
+    "del b"
    ]
   },
   {
@@ -221,11 +317,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 24,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "str"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a,b = 12,'abc'\n",
+    "type(a)\n",
+    "type(b)"
    ]
   },
   {
@@ -244,11 +353,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "bool"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "g = f\n",
+    "type(g)"
    ]
   },
   {
