--- a/9-oo-3.ipynb
+++ b/9-oo-3.ipynb
@@ -30,11 +30,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Dog:\n",
+    "    kind = ''\n",
+    "    def __init__(self, name):\n",
+    "        self.name = name\n",
+    "        \n",
+    "    def bark(self):\n",
+    "        return 'woof - woof'\n",
+    "\n",
+    "a = Dog('Fino')\n",
+    "b = Dog('Buddy')\n",
+    "    "
    ]
   },
   {
@@ -63,47 +73,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'canidea'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "Dog.kind = 'canidea'\n",
+    "a.kind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'canidea'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "b.kind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Fino'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Buddy'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "b.name"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'woof - woof'"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "a.bark()"
    ]
   },
   {
@@ -134,39 +200,105 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Cat:\n",
+    "    kind = 'Felidea'\n",
+    "    def __init__(self , name):\n",
+    "        self.name = name\n",
+    "    def mew(self):\n",
+    "        return 'Mew-Mew'\n",
+    "c = Cat('Garfield')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Felidea'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "Cat.kind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Felidea'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "c.kind"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Garfield'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Mew-Mew'"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c.mew()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 请在这里输入代码"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -191,12 +323,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Animal:\n",
+    "    kind = ''\n",
+    "    def __init__(self,name):\n",
+    "        self.name = name\n",
+    "    def voice(self):\n",
+    "        return '...'"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -209,12 +353,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Dog(Animal):\n",
+    "    kind = 'canidea'\n",
+    "    def voice(self):\n",
+    "        return 'Woof - Woof'\n",
+    "    bark = voice"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -225,11 +380,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Cat(Animal):\n",
+    "    kind = 'felidea'\n",
+    "    def voice (self):\n",
+    "        return 'mew-mew'\n",
+    "    mew = voice"
    ]
   },
   {
@@ -241,20 +400,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "a = Animal ('djslk')\n",
+    "c = Cat ('Garlield')\n",
+    "d = Dog('Snoopy')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "djslk : ...\n",
+      "Garlield : mew-mew\n",
+      "Snoopy : Woof - Woof\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "for animal in [a,c,d]:\n",
+    "    print (animal.name, ':' ,animal.voice())"
    ]
   },
   {
