--- a/b-final.ipynb
+++ b/b-final.ipynb
@@ -87,12 +87,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hi , What is your name ?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " stones\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello stones!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"hi , What is your name ?\")\n",
+    "name = input()\n",
+    "print(f\"Hello {name}!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 请在这里输入代码"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -103,12 +134,67 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " fine\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorry to hear that\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"How are you today?\")\n",
+    "feeling = input()\n",
+    "if 'good' in feeling:\n",
+    "    print(\"I am feeling too\")\n",
+    "else:\n",
+    "    print(\"Sorry to hear that\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 请在这里输入代码"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -119,12 +205,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " Good\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I am feeling too\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"How are you today?\")\n",
+    "feeling = input()\n",
+    "if 'good' in feeling.lower():\n",
+    "    print(\"I am feeling too\")\n",
+    "else:\n",
+    "    print(\"sorry to hear that!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 请在这里输入代码"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -135,12 +255,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What's your favorite color?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " green\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You like green? My favoriter color is yellow\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "print(\"What's your favorite color?\")\n",
+    "favcolor = input()\n",
+    "colors = ['red' , 'green' , 'orange', 'yellow', 'blue' ,'indigo', 'purple']\n",
+    "print(f\"You like {favcolor.lower()}? My favoriter color is {random.choice(colors)}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# 请在这里输入代码"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -191,12 +351,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import time\n",
+    "class Bot:\n",
+    "    \n",
+    "    wait = 1\n",
+    "    \n",
+    "    def __init__(self):\n",
+    "        self.q = ''\n",
+    "        self.p = ''\n",
+    "    def _think(self, s ):\n",
+    "        \n",
+    "        return s\n",
+    "    def run(self):\n",
+    "        time.sleep(Bot.wait)\n",
+    "        print(self.q)\n",
+    "        self.a = input()\n",
+    "        time.sleep(Bot.wait)\n",
+    "        print(self._think(self.a))\n",
+    "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -214,30 +405,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class HelloBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \"Hi , What is your name ?\"\n",
+    "    def _think(self , s ):\n",
+    "        return f\"Hello{s}\"\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class GreetingBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \"How are you today?\"\n",
+    "    def _think(self,s):\n",
+    "        if 'good' in s.lower():\n",
+    "            return \"I'm feeling good too\"\n",
+    "        else:\n",
+    "            return \"Sorry to hear that\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "import random\n",
+    "class FavoriteColorBot(Bot):\n",
+    "    def __init__(self):\n",
+    "        self.q = \"What is your favorite color?\"\n",
+    "    def _think (self, s ):\n",
+    "        colors = ['red', 'orange', 'yellow' , 'green' , 'blue', 'indigo', 'purple']\n",
+    "        return f\"You like {s.lower()}? My favorite is {random.choice(colors)}\"\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -252,12 +483,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 请在这里输入代码"
+    "class Garfield():\n",
+    "    \n",
+    "    def __init__(self, wait = 1):\n",
+    "        Bot.wait = wait\n",
+    "        self.bots = []\n",
+    "        \n",
+    "    def add(self, bot):\n",
+    "        self.bots.append(bot)\n",
+    "    def _prompt(self , s):\n",
+    "        print(s)\n",
+    "        print()\n",
+    "        \n",
+    "    def run(self):\n",
+    "        self._prompt(\"this is Garfield dialog system. Let's talk.\")\n",
+    "        for bot in self.bots:\n",
+    "            bot.run()\n",
+    "        "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -274,11 +528,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is Garfield dialog system. Let's talk.\n",
+      "\n",
+      "Hi , What is your name ?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " stones\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hellostones\n",
+      "How are you today?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " fine\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorry to hear that\n",
+      "What is your favorite color?\n"
+     ]
+    },
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " abc\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "You like abc? My favorite is yellow\n"
+     ]
+    }
+   ],
    "source": [
-    "# 请在这里输入代码"
+    "garfield = Garfield(1)\n",
+    "garfield.add(HelloBot())\n",
+    "garfield.add(GreetingBot())\n",
+    "garfield.add(FavoriteColorBot())\n",
+    "garfield.run()"
    ]
   },
   {
@@ -320,7 +632,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -440,7 +752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -460,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -485,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -494,7 +806,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -521,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -537,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
